--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+/*
+
+Design Challenge: Use only #fff and #000 as colors.
+
+
+*/
+
 @font-face {
   font-family: Chewy;
   src: url("./RacingSansOne-Regular.ttf");
@@ -9,26 +16,114 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  margin: auto;
+  background-color: #fff;
+  height: 100%;
+}
+
+body, #root, main {
+  min-height: 100vh;
+}
+
+main {
+  background-color: #000;
+  height: 100%;
   width: 1000px;
   margin: auto;
-  background-color: #ffb35c;
+  padding: 20px 200px;
+
+}
+
+aside {
+  position: fixed;
+  background-color: #000;
+  height: 100vh;
+  width: calc(50% - 500px);
+  right: calc(50% + 500px);
+  top: 0;
+  font-size: 2em;
+}
+
+@keyframes sample {
+  0% { transform: rotate(0deg); }
+  25% { transform: rotate(90deg); }
+  50% { transform: rotate(180deg);}
+  75% { transform: rotate(270deg);}
+  100% { transform: rotate(360deg);}
+}
+aside > div {
+  bottom: 0;
+  left: calc(50% - 500px);
+  position: fixed;
+  transform-origin: 0% 100%;
+  transform: rotate(-90deg);
+}
+
+aside h1, aside h2 {
+  width: 100vh;
+  text-align: right;
+  padding-right: 20px;
+}
+
+aside h1 {
+  letter-spacing: 0.1em;
+  font-size: 5em;
+}
+
+aside h2 {
+  font-size: 1.3em;
+}
+
+button {
+  cursor: pointer;
+  font-weight: bold;
+}
+
+button:hover {
+  text-decoration: underline;
+}
+
+button.onBlack {
+  background-color: #000;
+  color: #fff;
+  border: 3px solid #fff;
+  padding: 10px;
+}
+
+button.onWhite {
+  background-color: #fff;
+  color: #000;
+  border: 3px solid #000;
+  padding: 10px;
+  margin: 15px;
+}
+
+#sortingAnimation {
+  position: fixed;
+  background-color: #fff;
+  height: 100vh;
+  left: calc(50% + 500px);
+  width: 200px;
+}
+
+button.onBlack + button.onBlack {
+  margin-left: 15px;
+}
+
+button.addItemButton {
+  font-size: 1.3em;
+  padding: 15px;
+  margin-bottom: 50px;
+}
+
+.rotated { 
+  transform: rotate(90deg);
 }
 
 h1, h2 {
   color: #fff;
   margin-bottom: 0;
   margin-top: 0;
-  font-family: Chewy;
-}
-
-
-h1 {
-  margin-top: 30px;
-}
-
-h2 {
-  margin-bottom: 20px;
-  font-size: 1.2em;
 }
 
 a {
@@ -43,7 +138,7 @@ a {
 #navigation {
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: right;
   margin: 20px 0;
 }
 
@@ -110,14 +205,14 @@ a {
 #options {
   display: flex;
   width: 100%;
-  margin: 50px; 
   justify-content: space-between;
+  margin-top: 50px;
 }
 .dropzone {
    width: 250px;
    background-color: white;
    text-align: center;
-   border: 3px dashed #d88200;
+   border: 3px dashed #000;
    cursor: pointer;
 }
 
@@ -142,7 +237,7 @@ a {
 }
 
 .addItemForm .image, .addItemForm .name {
-  border: 1px solid #666;
+  border: 1px solid #000;
 }
 
 .addItemForm .image {
@@ -179,4 +274,22 @@ a {
 .addItem {
   text-align: center;
   margin-top: 10px;
+}
+
+.alignRight {
+  text-align: right;
+}
+
+.alignCenter {
+  text-align: center;
+}
+
+#itemListOptions {
+  display: flex;
+  justify-content: space-between;
+}
+
+.image p { 
+  margin: 0;
+  font-size: 0.9em;
 }
